--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,20 +2,37 @@
 <html lang="bn">
   <head>
     <meta charset="UTF-8" />
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    
-    <meta name="description" content="বাংলাদেশের মায়েদের জন্য এআই চালিত গর্ভাবস্থা ঝুঁকি সচেতনতা অ্যাপ" />
 
-    <title>Mobile Midwife | ডিজিটাল ধাত্রী সেবা</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🤰</text></svg>">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
 
+    <meta
+      name="description"
+      content="বাংলাদেশের মায়েদের জন্য এআই চালিত গর্ভাবস্থা ঝুঁকি সচেতনতা অ্যাপ"
+    />
+
+    <title>Mobile Midwife AI | ডিজিটাল ধাত্রী</title>
+
+    <!-- Emoji favicon -->
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🤰</text></svg>"
+    />
+
+    <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Bangla Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
+    <!-- Tailwind config -->
     <script>
       tailwind.config = {
         theme: {
@@ -25,28 +42,36 @@
             },
             colors: {
               brand: {
-                50: '#fdf2f8',
-                100: '#fce7f3',
-                500: '#ec4899', 
-                600: '#db2777', 
-                700: '#be185d',
-              }
-            }
-          }
-        }
-      }
+                light: '#fdf2f8',
+                primary: '#ec4899',
+                dark: '#be185d',
+              },
+            },
+          },
+        },
+      };
     </script>
 
+    <!-- Global Style (NO animation, NO canvas) -->
     <style>
+      html,
       body {
-        background-color: #fdf2f8;
         margin: 0;
         padding: 0;
-        -webkit-font-smoothing: antialiased; /* ফন্ট আরও শার্প দেখাবে */
+        min-height: 100%;
+        font-family: 'Hind Siliguri', sans-serif;
+        background-color: #fdf2f8 !important;
+        background-image: none !important;
+        -webkit-font-smoothing: antialiased;
+      }
+
+      /* Kill any injected canvas or animation */
+      canvas {
+        display: none !important;
       }
     </style>
   </head>
-  
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
