--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,53 +2,26 @@
 <html lang="bn">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Mobile Midwife</title>
 
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
-
-    <title>Mobile Midwife AI</title>
-
-    <!-- Favicon -->
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🤰</text></svg>"
-    />
-
-    <!-- ✅ Tailwind CDN (VERY IMPORTANT) -->
+    <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Bangla Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
 
-    <!-- Tailwind Custom Config -->
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['"Hind Siliguri"', "sans-serif"],
-            },
-          },
-        },
-      };
-    </script>
-
     <style>
       body {
-        margin: 0;
         font-family: "Hind Siliguri", sans-serif;
         background-color: #fdf2f8;
+        margin: 0;
       }
     </style>
   </head>
-
   <body>
     <div id="root"></div>
   </body>
